--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -10,6 +10,7 @@
     --color-title: rgba(121, 172, 120, 1);
     --color-active: rgba(121, 172, 120, 1);
     --font-size-default: 10px;
+    --bg-o: rgba(97, 130, 100, 0.658);
 }
 
 * {
@@ -57,13 +58,13 @@ nav ul a:hover {
     text-decoration: underline;
 }
 
-nav ul li:nth-child(2) a {
+nav ul li:nth-child(3) a {
     color: var(--color-active);
     border-bottom: .3rem solid var(--color-active);
     padding-bottom: .4rem;
 }
 
-nav ul li:nth-child(2) a:hover {
+nav ul li:nth-child(3) a:hover {
     text-decoration: none;
 }
 
@@ -75,7 +76,7 @@ nav .btn button {
     border-radius: 4rem;
     padding: 1.5rem 2.5rem;
     color: var(--text-white);
-    transition: all .30s ease-in-out;
+    transition: all .30s ease;
 }
 
 nav .btn button:hover {
@@ -87,5 +88,84 @@ nav .btn button:hover {
 
 nav .btn button:active {
     transform: scale(.9) ;
+}
+
+
+.menu {
+    display: none;
+}
+
+.menu button {
+    background: none;
+    transition: all .30s ease-in-out;
+}
+
+ion-icon:nth-child(1) {
+    color: var(--prymary-color);
+    font-size: 50px;
+}
+
+@media only screen and (max-width: 400px) {
+    nav {
+        justify-content: space-between;
+        padding: 0 1.5rem;
+        position: relative;
+    }
+
+    nav .logo img {
+        width: 8.5rem;
+    }
+
+    nav ul {
+        position: absolute;
+        top: 0;
+        left: 0;
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+        background: var(--bg-o);
+        backdrop-filter: blur(.4rem);
+        padding: 2rem 0 0 10rem;
+        align-items: flex-start;
+        z-index: 4;
+        gap: 4rem;
+        margin-left: 100%;
+        transition: all .30s ease-in-out;
+    }
+
+    nav ul a {
+        padding: 1rem 2rem;
+        background: var(--text-white);
+        border-radius: 1rem;
+        font-weight: 600;
+    }
+
+    nav li:nth-child(1) {
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+        padding-right: 2rem;
+        margin-bottom: 0;
+    }
+
+    nav ul li {
+        margin-bottom: 3rem;
+    }
+
+    nav .btn {
+        display: none;
+    }
+
+    nav .menu {
+        display: block;
+    }
+
+    nav .menu button:active {
+        transform: scale(.8);
+    }
+
+    .mobile {
+        margin-left: 0;
+    }
 }
 
