--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -282,3 +282,31 @@ ion-icon:nth-child(1) {
     width: 300px;
     height: auto;
 }
+
+/* SECTION 3 */
+.section-tree {
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    height: auto;
+    margin-left: 20%;
+    margin-bottom: 10rem;
+}
+
+.section-4 {
+    width: 60%;
+    height: auto;
+    display: block;
+    margin-bottom: 10rem;
+    margin-left: 10%;
+    align-content: center;
+}
+
+.section-4 > .h1 {
+    font-size: 4.8rem;
+    font-family: var(--font-Ibm);
+    margin-bottom: 5rem;
+    display: flex;
+    justify-content: center;
+}
+
